--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Created by Microsocks
+Ethan Barclay
 https://github.com/microsockss/
 -->
 <html>
@@ -9,6 +9,7 @@ https://github.com/microsockss/
   <title>Final Project</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -16,27 +17,36 @@ https://github.com/microsockss/
 <body>
   <!-- Black Bar at top-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
-        <img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        Welcome
-      </a>
+    <div class="navbar-brand brand" href="/">
+      <img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="" style="margin-right:10px;"> Particles Dark
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link nav" href="/" style="cursor: pointer;">Home<span class="sr-only">(current)</span></a>
+          <a class="nav" href="index.html" style="cursor: pointer;">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link nav" href="/about.html" style="cursor: pointer;">About<span class="sr-only">(current)</span></a>
+          <a class="nav" href="about.html" style="cursor: pointer;">About<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav" href="contact.html" style="cursor: pointer;">Contact<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav" href="services.html" style="cursor: pointer;">Services<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav" href="gallery.html" style="cursor: pointer;">Gallery<span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
   </nav>
+
   <div class="intro">
-  <canvas id="canvas" style="margin-bottom: 5px;" class="particles"></canvas>
-      <div id="buffer" style="display:none;">
+    <canvas id="canvas" style="margin-bottom: 5px;" class="particles"></canvas>
+    <div id="buffer" style="display:none;">
 
 
 
@@ -46,21 +56,28 @@ https://github.com/microsockss/
   <div class="about">
     <br>
     <div class="container-fluid" style="text-align: center;">
-      <div class="row">
+      <div class="row" style="text-align: center;">
         <div class="col-sm">
-          <img src="img/location.svg" alt="info1" style="width: 100px;height: 100px;"><br>
-          <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam congue sit amet enim in tristique.</a>
+          <a href="about.html">
+          <img src="img/rocket.svg" alt="about" style="width: 100px;height: 100px;"><br>
+          </a>
+          <a style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam congue sit amet enim in tristique.</a>
         </div>
         <div class="col-sm">
-          <img src="img/rocket.svg" alt="info2" style="width: 100px; height: 100px; top: 5px; position: relative;"><br><br>
-          <a style="top: 6px; position: relative;">Integer magna elit, facilisis in ipsum sit amet, ornare faucibus felis. Cras id posuere nunc.</a>
+          <a href="contact.html">
+          <img src="img/location.svg" alt="contact" style="width: 100px; height: 100px; top: 5px; position: relative;"><br><br>
+          </a>
+          <a style="top: 6px; position: relative; ">Integer magna elit, facilisis in ipsum sit amet, ornare faucibus felis. Cras id posuere nunc.</a>
         </div>
         <div class="col-sm">
-          <img src="img/globe.svg" alt="info3" style="width: 100px; height: 100px;"><br><br>
+          <a href="services.html">
+          <img src="img/globe.svg" alt="services" style="width: 100px; height: 100px;"><br><br>
+        </a>
           <a style="top: -23px; position: relative;">Proin quis sodales est, eget molestie tortor. Nam viverra purus mauris, vitae tempus arcu viverra.</a>
         </div>
       </div>
     </div>
   </div>
 </body>
+
 </html>
