--- a/about.html
+++ b/about.html
@@ -13,26 +13,28 @@
 <body>
   <!-- Black Bar at top-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
-        <img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        Welcome
-      </a>
+    <div class="navbar-brand brand" href="/">
+      <img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="" style="margin-right:10px;"> Particles Dark
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link nav" href="/" style="cursor: pointer;">Home<span class="sr-only">(current)</span></a>
+          <a class="nav" href="index.html" style="cursor: pointer;">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link nav" href="about.html" style="cursor: pointer;">About<span class="sr-only">(current)</span></a>
+          <a class="nav" href="about.html" style="cursor: pointer;">About<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link nav" href="contact.html" style="cursor: pointer;">Contact<span class="sr-only">(current)</span></a>
+          <a class="nav" href="contact.html" style="cursor: pointer;">Contact<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link nav" href="services.html" style="cursor: pointer;">Services<span class="sr-only">(current)</span></a>
+          <a class="nav" href="services.html" style="cursor: pointer;">Services<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav" href="gallery.html" style="cursor: pointer;">Gallery<span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
@@ -41,24 +43,31 @@
   <div class="container-fluid">
     <div class="jumbotron container-fluid">
       <div class="row">
-        <h1>About Us</h1>
+        <div class="col-6">
+          <h1>About Us</h1>
+        </div>
       </div>
       <div class="row">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida arcu risus, euismod imperdiet tellus tempor vel. Cras pellentesque neque eu magna pharetra, id suscipit leo hendrerit. Nam aliquam lacus a libero ultrices, vitae sodales augue scelerisque.
-          Proin rutrum est eu ultricies elementum. Phasellus ut nibh ac nulla convallis porta sed nec justo. Etiam ac euismod risus, sed tempus lorem. Fusce sapien tellus, vestibulum et pharetra maximus, eleifend sit amet massa. Cras quam justo, convallis
-          sit amet interdum non, mollis vitae nisi. Proin gravida justo tincidunt, tempus ligula vel, tempus eros. Fusce magna libero, tincidunt quis nisl ac, aliquam bibendum tortor. Donec mi nunc, sagittis sed est eget, porta maximus nulla. Donec ultrices
-          nisi justo, sit amet sodales leo ornare eget. Duis pellentesque vel tortor at tincidunt. Sed ut fermentum quam. Ut sodales arcu ac sem vulputate, nec suscipit massa laoreet. Sed ornare mi pretium sodales fermentum.
-        </p>
-        <img src="" />
+        <div class="col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida arcu risus, euismod imperdiet tellus tempor vel. Cras pellentesque neque eu magna pharetra, id suscipit leo hendrerit. Nam aliquam lacus a libero ultrices, vitae sodales augue scelerisque.
+            Proin rutrum est eu ultricies elementum. Phasellus ut nibh ac nulla convallis porta sed nec justo. Etiam ac euismod risus, sed tempus lorem. Fusce sapien tellus, vestibulum et pharetra maximus, eleifend sit amet massa.
+          </p>
+        </div>
+        <div class="col-6">
+          <img style="height:275px; width:275px;" src="img/search.svg" />
+        </div>
       </div>
+      <br />
       <div class="row">
-        <p>
-          Quisque eleifend auctor fringilla. Suspendisse vel libero et metus malesuada feugiat. Vestibulum luctus tempus sem, non suscipit orci tincidunt et. Sed ipsum magna, fermentum vel erat nec, condimentum rhoncus metus. Vestibulum vel ante nec mi vestibulum
-          ultrices ac non tortor. Sed sit amet suscipit diam. Duis convallis accumsan metus, et laoreet orci ornare ut. In hac habitasse platea dictumst. Mauris nec lectus id dui tristique cursus sed a lorem. Cras vitae dapibus tortor. Proin luctus pretium
-          nisi ac tincidunt. Aliquam nec condimentum augue. Sed congue, augue sollicitudin laoreet rhoncus, justo mauris posuere tellus, vitae pharetra ligula velit pellentesque massa. Etiam lobortis diam sem, quis condimentum eros pharetra id. Vivamus
-          nec eros lacus. Maecenas in nunc ante.
-        </p>
+        <div class="col-14" style="margin-left:16px;">
+          <p>
+            Quisque eleifend auctor fringilla. Suspendisse vel libero et metus malesuada feugiat. Vestibulum luctus tempus sem, non suscipit orci tincidunt et. Sed ipsum magna, fermentum vel erat nec, condimentum rhoncus metus. Vestibulum vel ante nec mi vestibulum
+            ultrices ac non tortor. Sed sit amet suscipit diam. Duis convallis accumsan metus, et laoreet orci ornare ut. In hac habitasse platea dictumst. Mauris nec lectus id dui tristique cursus sed a lorem. Cras vitae dapibus tortor. Proin luctus
+            pretium nisi ac tincidunt. Aliquam nec condimentum augue. Sed congue, augue sollicitudin laoreet rhoncus, justo mauris posuere tellus, vitae pharetra ligula velit pellentesque massa. Etiam lobortis diam sem, quis condimentum eros pharetra
+            id. Vivamus nec eros lacus. Maecenas in nunc ante.
+          </p>
+        </div>
       </div>
     </div>
 </body>
