--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@ https://github.com/microsockss/
 <html>
 
 <head>
-  <title>Final Project</title>
+  <title>Particles Dark</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +23,7 @@ https://github.com/microsockss/
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-      </button>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -59,20 +60,20 @@ https://github.com/microsockss/
       <div class="row" style="text-align: center;">
         <div class="col-sm">
           <a href="about.html">
-          <img src="img/rocket.svg" alt="about" style="width: 100px;height: 100px;"><br>
+            <img src="img/rocket.svg" alt="about" style="width: 100px;height: 100px;"><br>
           </a>
           <a style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam congue sit amet enim in tristique.</a>
         </div>
         <div class="col-sm">
           <a href="contact.html">
-          <img src="img/location.svg" alt="contact" style="width: 100px; height: 100px; top: 5px; position: relative;"><br><br>
+            <img src="img/location.svg" alt="contact" style="width: 100px; height: 100px; top: 5px; position: relative;"><br><br>
           </a>
           <a style="top: 6px; position: relative; ">Integer magna elit, facilisis in ipsum sit amet, ornare faucibus felis. Cras id posuere nunc.</a>
         </div>
         <div class="col-sm">
           <a href="services.html">
-          <img src="img/globe.svg" alt="services" style="width: 100px; height: 100px;"><br><br>
-        </a>
+            <img src="img/globe.svg" alt="services" style="width: 100px; height: 100px;"><br><br>
+          </a>
           <a style="top: -23px; position: relative;">Proin quis sodales est, eget molestie tortor. Nam viverra purus mauris, vitae tempus arcu viverra.</a>
         </div>
       </div>
