--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans" rel="stylesheet">
+
 </head>
 
 <body>
@@ -18,7 +20,7 @@
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-      </button>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -41,32 +43,38 @@
   </nav>
 
   <div class="container-fluid">
-    <div class="jumbotron container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>About Us</h1>
+    <div class="card container-fluid">
+      <div class="contents">
+        <div class="row">
+          <div class="col-6">
+            <h1>About Us</h1>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida arcu risus, euismod imperdiet tellus tempor vel. Cras pellentesque neque eu magna pharetra, id suscipit leo hendrerit. Nam aliquam lacus a libero ultrices, vitae sodales augue scelerisque.
-            Proin rutrum est eu ultricies elementum. Phasellus ut nibh ac nulla convallis porta sed nec justo. Etiam ac euismod risus, sed tempus lorem. Fusce sapien tellus, vestibulum et pharetra maximus, eleifend sit amet massa.
-          </p>
+        <div class="row">
+          <div class="col-6">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida arcu risus, euismod imperdiet tellus tempor vel. Cras pellentesque neque eu magna pharetra, id suscipit leo hendrerit. Nam aliquam lacus a libero ultrices, vitae
+              sodales augue scelerisque.
+              Proin rutrum est eu ultricies elementum. Phasellus ut nibh ac nulla convallis porta sed nec justo. Etiam ac euismod risus, sed tempus lorem. Fusce sapien tellus, vestibulum et pharetra maximus, eleifend sit amet massa.
+            </p>
+          </div>
+          <div class="col-6">
+            <img style="height:275px; width:275px;" src="img/search.svg" />
+          </div>
         </div>
-        <div class="col-6">
-          <img style="height:275px; width:275px;" src="img/search.svg" />
-        </div>
-      </div>
-      <br />
-      <div class="row">
-        <div class="col-14" style="margin-left:16px;">
-          <p>
-            Quisque eleifend auctor fringilla. Suspendisse vel libero et metus malesuada feugiat. Vestibulum luctus tempus sem, non suscipit orci tincidunt et. Sed ipsum magna, fermentum vel erat nec, condimentum rhoncus metus. Vestibulum vel ante nec mi vestibulum
-            ultrices ac non tortor. Sed sit amet suscipit diam. Duis convallis accumsan metus, et laoreet orci ornare ut. In hac habitasse platea dictumst. Mauris nec lectus id dui tristique cursus sed a lorem. Cras vitae dapibus tortor. Proin luctus
-            pretium nisi ac tincidunt. Aliquam nec condimentum augue. Sed congue, augue sollicitudin laoreet rhoncus, justo mauris posuere tellus, vitae pharetra ligula velit pellentesque massa. Etiam lobortis diam sem, quis condimentum eros pharetra
-            id. Vivamus nec eros lacus. Maecenas in nunc ante.
-          </p>
+        <br />
+        <div class="row">
+          <div class="col-14" style="margin-left:16px;">
+            <p>
+              Quisque eleifend auctor fringilla. Suspendisse vel libero et metus malesuada feugiat. Vestibulum luctus tempus sem, non suscipit orci tincidunt et. Sed ipsum magna, fermentum vel erat nec, condimentum rhoncus metus. Vestibulum vel ante
+              nec mi vestibulum
+              ultrices ac non tortor. Sed sit amet suscipit diam. Duis convallis accumsan metus, et laoreet orci ornare ut. In hac habitasse platea dictumst. Mauris nec lectus id dui tristique cursus sed a lorem. Cras vitae dapibus tortor. Proin
+              luctus
+              pretium nisi ac tincidunt. Aliquam nec condimentum augue. Sed congue, augue sollicitudin laoreet rhoncus, justo mauris posuere tellus, vitae pharetra ligula velit pellentesque massa. Etiam lobortis diam sem, quis condimentum eros
+              pharetra
+              id. Vivamus nec eros lacus. Maecenas in nunc ante.
+            </p>
+          </div>
         </div>
       </div>
     </div>
