--- a/services.html
+++ b/services.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans" rel="stylesheet">
+
 </head>
 
 <body>
@@ -18,7 +20,7 @@
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-      </button>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -41,43 +43,46 @@
   </nav>
 
   <div class="container-fluid">
-    <div class="jumbotron container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>Services</h1>
+    <div class="card container-fluid">
+      <div class="contents">
+        <div class="row">
+          <div class="col-6">
+            <h1>Services</h1>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida arcu risus, euismod imperdiet tellus tempor vel. Cras pellentesque neque eu magna pharetra, id suscipit leo hendrerit. Nam aliquam lacus a libero ultrices, vitae sodales augue scelerisque.
-            Proin rutrum est eu ultricies elementum. Phasellus ut nibh ac nulla convallis porta sed nec justo. Etiam ac euismod risus, sed tempus lorem. Fusce sapien tellus, vestibulum et pharetra maximus, eleifend sit amet massa.
-          </p>
+        <div class="row">
+          <div class="col-6">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida arcu risus, euismod imperdiet tellus tempor vel. Cras pellentesque neque eu magna pharetra, id suscipit leo hendrerit. Nam aliquam lacus a libero ultrices, vitae
+              sodales augue scelerisque.
+              Proin rutrum est eu ultricies elementum. Phasellus ut nibh ac nulla convallis porta sed nec justo. Etiam ac euismod risus, sed tempus lorem. Fusce sapien tellus, vestibulum et pharetra maximus, eleifend sit amet massa.
+            </p>
+          </div>
+          <div class="col-6">
+            <img style="height:300px; width:300px;" src="img/gear.svg" />
+          </div>
         </div>
-        <div class="col-6">
-          <img style="height:300px; width:300px;" src="img/gear.svg" />
-        </div>
-      </div>
-      <br />
-      <div class="row">
-        <div class="col-14" style="margin-left:-10px;">
-          <ul>
-            <li>
-              Nullam ac porttitor est, eu mollis libero. Suspendisse ullamcorper lorem.
-            </li>
-            <li>
-              Vestibulum vestibulum justo lacinia purus facilisis, id varius massa iaculis. Praesent a nibh a sem porta rutrum eu laoreet lectus.
-            </li>
-            <li>
-              Maecenas vel consequat tellus. Vestibulum mattis sapien non turpis eleifend varius. Curabitur convallis aliquet condimentum.
-            </li>
-            <li>
-              Donec pharetra, quam at aliquam facilisis, leo velit lacinia massa.
-            </li>
-            <li>
-              Vestibulum faucibus purus vel felis scelerisque, nec tincidunt sapien rhoncus. Nulla in neque non dui posuere fermentum in eu purus.
-            </li>
-          </ul>
+        <br />
+        <div class="row">
+          <div class="col-14" style="margin-left:-10px;">
+            <ul>
+              <li>
+                Nullam ac porttitor est, eu mollis libero. Suspendisse ullamcorper lorem.
+              </li>
+              <li>
+                Vestibulum vestibulum justo lacinia purus facilisis, id varius massa iaculis. Praesent a nibh a sem porta rutrum eu laoreet lectus.
+              </li>
+              <li>
+                Maecenas vel consequat tellus. Vestibulum mattis sapien non turpis eleifend varius. Curabitur convallis aliquet condimentum.
+              </li>
+              <li>
+                Donec pharetra, quam at aliquam facilisis, leo velit lacinia massa.
+              </li>
+              <li>
+                Vestibulum faucibus purus vel felis scelerisque, nec tincidunt sapien rhoncus. Nulla in neque non dui posuere fermentum in eu purus.
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
