Fixed spacing of captions and removed unnecessary style tags

--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@ https://github.com/microsockss/
   </div>
   <div class="about">
     <br>
-    <div class="container-fluid" style="text-align: center;">
+    <div class="container-fluid">
       <div class="row" style="text-align: center;">
         <div class="col-sm">
           <a href="about.html">
-            <img src="img/rocket.svg" alt="about" style="width: 100px;height: 100px;"><br>
+            <img src="img/rocket.svg" alt="about" style="width: 100px; height: 100px;"><br><br>
           </a>
-          <a style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam congue sit amet enim in tristique.</a>
+          <a class="caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam congue sit amet enim in tristique.</a>
         </div>
         <div class="col-sm">
           <a href="contact.html">
-            <img src="img/location.svg" alt="contact" style="width: 100px; height: 100px; top: 5px; position: relative;"><br><br>
+            <img src="img/location.svg" alt="contact" style="width: 100px; height: 100px;"><br><br>
           </a>
-          <a style="top: 6px; position: relative; ">Integer magna elit, facilisis in ipsum sit amet, ornare faucibus felis. Cras id posuere nunc.</a>
+          <a class="caption">Integer magna elit, facilisis in ipsum sit amet, ornare faucibus felis. Cras id posuere nunc.</a>
         </div>
         <div class="col-sm">
           <a href="services.html">
             <img src="img/globe.svg" alt="services" style="width: 100px; height: 100px;"><br><br>
           </a>
-          <a style="top: -23px; position: relative;">Proin quis sodales est, eget molestie tortor. Nam viverra purus mauris, vitae tempus arcu viverra.</a>
+          <a class="caption">Proin quis sodales est, eget molestie tortor. Nam viverra purus mauris, vitae tempus arcu viverra.</a>
         </div>
       </div>
     </div>
