--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 Created by Microsocks
 https://github.com/microsockss/
 -->
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 
 <head>
   <title>Particles Dark</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:title" content="particles-dark" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://github.com/microsockss/particles-dark/" />
+  <meta property="og:image" content="img/logo.svg" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans" rel="stylesheet">
