Adjusted colors and fixed file linking

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://github.com/microsockss/
 
 
 
-      <script src="js/particle-text.js"></script>
+      <script src="js/index.js"></script>
     </div>
   </div>
   <div class="about">
